Fixed home page layout issues. Added loading messages.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -48,12 +48,31 @@
   color: var(--black);
 }
 
+@keyframes dots {
+  0%  { content: "."; }
+  25% { content: ".."; }
+  50% { content: "..."; }
+  75% { content: ""; }
+  100% { content: "."; }
+}
+
+.dot_animate::after {
+  display: inline-block;
+  width: 1em;
+
+  text-align: left;
+
+  content: ".";
+  animation: dots 1s steps(4, end) infinite;
+}
+
 /* Home - Layout */
 
 .home_container {
   display: flex;
   flex-direction: column;
 
+  width: 100vw;
   height: 100vh;
 }
 
@@ -80,13 +99,12 @@
 
 .home_main {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
   gap: 20px;
 
-  margin-top: 15vh;
-  width: 100%;
-  height: 80vh;
+  margin-top: 125px;
+  height: calc(100vh - 125px);
   padding: 0 20px;
 
   color: var(--black);
@@ -98,9 +116,10 @@
   flex-shrink: 0;
   overflow-y: auto;
 
-  margin: auto 30px auto 50px;
-  width: 280px;
-  height: fit-content;
+  margin: auto;
+  width: 20%;
+  min-width: 280px;
+  height: 65%;
   padding: 10px 20px 30px;
 
   background-color: var(--yellow);
@@ -243,13 +262,13 @@
 /* Home - Team Selection */
 
 .team_selection {
-  flex-grow: 1;
+  flex-shrink: 0;
   overflow-y: scroll;
 
-  margin: 35px -120px auto 30px;
-  width: auto;
-  min-width: 0;
-  height: 90%;
+  margin: auto;
+  width: 63%;
+  min-width: 650px;
+  height: 85%;
   padding: 20px;
 
   background-color: var(--orange);
@@ -296,6 +315,21 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 8px;
+}
+
+.teams_loading_message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 8rem 13rem;
+
+  color: var(--black);
+
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
 }
 
 .select_team_btn {
@@ -412,8 +446,8 @@
   gap: 20px;
 
   margin-top: 120px;
-  padding: 0 20px;
   height: calc(100vh - 120px);
+  padding: 0 20px;
 }
 
 /* Draft - Picks */
@@ -469,6 +503,20 @@
   max-width: 100%;
   height: 100%;
   padding: 8px 841px 8px 12px;
+}
+
+.picks_loading_message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+
+  color: var(--black);
+
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
 }
 
 .draft_pick {
@@ -622,6 +670,10 @@
   background-color: var(--blue);
   color: var(--white);
   border: 2px solid var(--black);
+}
+
+.draft_tool:active {
+  border-color: black;
 }
 
 .confirm_undo_modal, .confirm_restart_modal {
@@ -979,6 +1031,8 @@
   display: block;
 
   margin-bottom: 8px;
+
+  color: var(--black);
 }
 
 .mute_btn_wrapper {
@@ -1151,6 +1205,21 @@
   padding: 20px;
 }
 
+.players_loading_message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  /* padding: 8rem 13rem; */
+
+  color: var(--black);
+
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+}
+
 .player {
   display: flex;
   align-items: center;
@@ -1292,11 +1361,27 @@
   color: black;
 }
 
+.team_loading_message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  /* padding: 8rem 13rem; */
+
+  color: var(--black);
+
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+}
+
 .team_profile_header {
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: visible;
+  height: 12vh;
 }
 
 .team_profile_logo_wrapper {
@@ -1735,6 +1820,20 @@
   overflow-y: auto;
 
   padding: 20px;
+}
+
+.results_loading_message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+
+  color: var(--black);
+
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
 }
 
 .round_divider {
